# eth-llm-poc

./: .gitignore  README.md  example_config.yaml  pyproject.toml
.github/workflows/: ci.yml  manual_run.yml  manual_run_batch.yml  poc4_7_ci.yml  poc4_7_report_fixture_test.yml  resolve_defaults.yml  test.yml
docs/: CONSENSUS_SPECS_OVERVIEW.md  EXECUTION_SPECS_OVERVIEW.md  IMPLEMENTATION_SPEC.md  PIPELINE_BRAINSTORMING.md  POC_IMPLEMENTATION_SPEC.md  QUALITATIVE_EVALUATION.md  QUALITATIVE_VALIDATION.md  ROADMAP.md  Request for Proposal (RFP)_ Integrating Large Language Models (LLMs) into Ethereum Protocol Security Research.md
docs/proposal/: BUDGET_AND_COST_STRUCTURE.csv  BUDGET_AND_COST_STRUCTURE.md  EVALUATION_CRITERIA_RESPONSE.md  INTEGRATION_GUIDE.md  OPERATIONS_AND_EXTENSION.md  PROJECT_PLAN_AND_TIMELINE.md  PROPOSAL_READINESS_CHECKLIST.md  RFP_RESPONSE_INDEX.md  TECHNICAL_ARCHITECTURE_AND_DESIGN.md  (+1 more)
examples/: README.md  qualitative_validation_transcript.md
poc4_7/: IMPLEMENTATION_PLAN.md  PHASE_PLAN.md  README.md  config.yaml  map_obligations.py  protocol_security_mapping_goals.md  pyproject.toml
poc4_7/fixtures/: stub_response.txt
poc4_7/src/poc4_7/: __init__.py  __main__.py  cli.py  config.py  reporting.py  runner.py  spec_index.py  utils.py
poc4_7/src/poc4_7/prompts/: phase1A_locations.txt  phase1B_codeflow.txt  phase2B_client_gaps.txt
poc4_7/tests/: test_fake_csvs.py  test_fake_mode.py  test_stub_csvs.py  test_stub_mode.py
scripts/: sync_workflow_defaults.py
src/eip_verify/: __init__.py  (+9 more)
tests/: __init__.py  test_cli_pipeline.py  test_fake_csvs.py  test_fake_mode.py  test_pipeline_summary.py  test_reporting.py
(+86 files in other folders)
