[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eip-verify"
version = "0.1.0"
description = "LLM-powered verification of EIP obligations against execution-specs and client implementations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "anyio>=4.0.0",
  "claude-agent-sdk>=0.1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[project.scripts]
eip-verify = "eip_verify.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eip_verify = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
